# Cine-Reserve-API

./: .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
apps/movies/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
apps/movies/migrations/: 0001_initial.py  0002_alter_movie_poster_url.py
apps/reservations/: services.py  tasks.py  urls.py  views.py
apps/seats/: models.py  serializers.py  urls.py  views.py
apps/seats/migrations/: 0001_initial.py
apps/tickets/: models.py  serializers.py  services.py  tasks.py  urls.py  views.py
apps/tickets/migrations/: 0001_initial.py  0002_initial.py
apps/users/: models.py  serializers.py  urls.py  views.py
apps/users/migrations/: 0001_initial.py
config/: celery.py  settings.py  urls.py
tests/: conftest.py  test_ratelimit.py
tests/movies/: test_serializers.py  test_views.py
tests/reservations/: test_services.py  test_tasks.py  test_views.py
tests/seats/: test_serializers.py  test_views.py
tests/tickets/: test_services.py  test_tasks.py  test_views.py
tests/users/: test_serializers.py  test_views.py
utils/: exceptions.py
